--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -1,113 +1,121 @@
 <div class="multiSelector JS_multiSelector--withColors" id="multiSelector-tagpicker">
 
   <div class="itemBox JS_itemBox ">
-    <ul class="itemBox__row">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
+    <div class="itemBox__row">
+      <ul class="itemBox__rowInner">
+        <li class="itemBox__cell">
+          <div class="itemBox__cellInner">
 
-          <input type="search" class="itemBox__input itemBox__input--fluid JS_multiSelector__filterInput" placeholder="filter through tags">
+            <input type="search" class="itemBox__input itemBox__input--fluid JS_multiSelector__filterInput" placeholder="filter through tags">
 
-        </div>
-      </li>
-    </ul>
-    {% include blocks/popup/ms-suggestions-tags-colors.html %}
+          </div>
+        </li>
+      </ul>
+      {% include blocks/popup/ms-suggestions-tags-colors.html %}
+    </div>
   </div>
 
   <div class="itemBox JS_itemBox">
-    <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
-      <li class="itemBox__cell itemBox__cell--action JS_toggle">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_selectedText"> Selected</div>
-        </div>
-      </li>
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
-        </div>
-      </li>
-    </ul>
+    <div class="itemBox__row">
+      <ul class="itemBox__rowInner itemBox__rowInner--item JS_selectionTitle">
+        <li class="itemBox__cell itemBox__cell--action JS_toggle">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action JS_selectedText"> Selected</div>
+          </div>
+        </li>
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected"></div>
+          </div>
+        </li>
+      </ul>
 
-    <div class="itemBox JS_itemBox--children JS_selectionChildren">
-      <div class="JS_sortable ui-sortable">
-        {% for item in site.data.tag-picker-color.selected %}
-          <ul class="itemBox__row itemBox__row--item JS_filterableCell">
-            <li class="itemBox__cell">
+      <div class="itemBox JS_itemBox--children JS_selectionChildren">
+        <div class="JS_sortable ui-sortable">
+          {% for item in site.data.tag-picker-color.selected %}
+          <div class="itemBox__row">
+            <ul class="itemBox__rowInner itemBox__rowInner--item JS_filterableCell">
+              <li class="itemBox__cell">
+                <div class="itemBox__cellInner JS_toggle--color">
+                  <div class="itemBox__value">
+
+                    {% include javascript/colorToggle.html color=item.color %} {% assign selectorData = ",,," | append: item.name %} {% include components/selector.html selectorData=selectorData expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+
+                  </div>
+                </div>
+              </li>
+              <li class="itemBox__cell flex-grow-0 itemBox__cell--action ui-sortable-handle JS_itemBox__cell--draggable">
+                <div class="itemBox__cellInner">
+                  <div class="itemBox__action itemBox__action--hidden">އ</div>
+                </div>
+              </li>
+              <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
+                <div class="itemBox__cellInner">
+                  <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
+                </div>
+              </li>
+            </ul>
+            {% include blocks/popup/ms-sublist-tags-colors-color.html %}
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+      <!-- /.itemBox -->
+    </div>
+    <div class="itemBox__row">
+      <ul class="itemBox__rowInner itemBox__rowInner--item JS_optionsTitle">
+        <li class="itemBox__cell itemBox__cell--toggle JS_toggle">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action"> All</div>
+          </div>
+        </li>
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
+          </div>
+        </li>
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll"></div>
+          </div>
+        </li>
+      </ul>
+
+      <div class="itemBox JS_itemBox--children JS_optionsChildren">
+        {% for item in site.data.tag-picker-color.options %}
+        <div class="itemBox__row">
+          <ul class="itemBox__rowInner itemBox__rowInner--item JS_filterableCell">
+            <li class="itemBox__cell ">
               <div class="itemBox__cellInner JS_toggle--color">
                 <div class="itemBox__value">
-
                   {% include javascript/colorToggle.html color=item.color %}
                   {% assign selectorData = ",,," | append: item.name %}
                   {% include components/selector.html selectorData=selectorData expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
-
                 </div>
               </div>
             </li>
-            <li class="itemBox__cell flex-grow-0 itemBox__cell--action ui-sortable-handle JS_itemBox__cell--draggable">
-              <div class="itemBox__cellInner">
-                <div class="itemBox__action itemBox__action--hidden">އ</div>
-              </div>
-            </li>
+            {% if item.selected == "true" %}
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
               <div class="itemBox__cellInner">
                 <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
               </div>
             </li>
-          </ul>
-          {% include blocks/popup/ms-sublist-tags-colors-color.html %}
-        {% endfor %}
-      </div>
-    </div><!-- /.itemBox -->
-
-    <ul class="itemBox__row itemBox__row--item JS_optionsTitle">
-      <li class="itemBox__cell itemBox__cell--toggle JS_toggle">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action"> All</div>
-        </div>
-      </li>
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove"></div>
-        </div>
-      </li>
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll JS_itemBox__action">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll"></div>
-        </div>
-      </li>
-    </ul>
-
-    <div class="itemBox JS_itemBox--children JS_optionsChildren">
-      {% for item in site.data.tag-picker-color.options %}
-        <ul class="itemBox__row itemBox__row--item JS_filterableCell">
-          <li class="itemBox__cell ">
-            <div class="itemBox__cellInner JS_toggle--color">
-              <div class="itemBox__value">
-
-                {% include javascript/colorToggle.html color=item.color %}
-                {% assign selectorData = ",,," | append: item.name %}
-                {% include components/selector.html selectorData=selectorData expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
-
-              </div>
-            </div>
-          </li>
-          {% if item.selected == "true" %}
-            <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
-              <div class="itemBox__cellInner">
-                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></div>
-              </div>
-            </li>
-          {% else %}
+            {% else %}
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__action">
               <div class="itemBox__cellInner">
                 <div class="itemBox__action JS_itemBox__action--add"></div>
               </div>
             </li>
-          {% endif %}
-        </ul>
-      {% include blocks/popup/ms-sublist-tags-colors-color.html %}
+            {% endif %}
+          </ul>
+          {% include blocks/popup/ms-sublist-tags-colors-color.html %}
+         </div>
       {% endfor %}
-    </div><!-- /.itemBox -->
-  </div><!-- /.itemBox -->
+      </div>
+      <!-- /.itemBox -->
+    </div>
+  </div>
+  <!-- /.itemBox -->
 
 </div>
 <!-- /.multiSelector -->
