--- a/_includes/popups/popup-copy-clipboard.html
+++ b/_includes/popups/popup-copy-clipboard.html
@@ -1,28 +1,32 @@
 <div class="multiSelector" id="ms-copy-success">
   <div class="itemBox">
-    <ul class="itemBox__row itemBox__row--custom">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <div class="note">
-            <p>Item details copied to the clipboard.</p>
+    <div class="itemBox__row">
+      <ul class="itemBox__rowInner itemBox__rowInner--custom">
+        <li class="itemBox__cell">
+          <div class="itemBox__cellInner">
+            <div class="note">
+              <p>Item details copied to the clipboard.</p>
+            </div>
           </div>
-        </div>
-      </li>
-    </ul>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
 
 
 <div class="multiSelector" id="ms-copy-error">
   <div class="itemBox">
-    <ul class="itemBox__row itemBox__row--custom">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <div class="note note--error">
-            <p>Error while copying to clipboard.</p>
+    <div class="itemBox__row">
+      <ul class="itemBox__rowInner itemBox__rowInner--custom">
+        <li class="itemBox__cell">
+          <div class="itemBox__cellInner">
+            <div class="note note--error">
+              <p>Error while copying to clipboard.</p>
+            </div>
           </div>
-        </div>
-      </li>
-    </ul>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
