--- a/_layouts/itembox.html
+++ b/_layouts/itembox.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-us" class="antialiased">
-  <head>
-    {% include head.html %}
-  </head>
 
-  <body class="page-{{ page.title }}">
-    <div class="overlay-body fixed pin opacity-0 pointer-events-none transition z-40"></div>
+<head>
+  {% include head.html %}
+</head>
 
-    {{ content }}
+<body class="page-{{ page.title }}">
+  <div class="overlay-body fixed pin opacity-0 pointer-events-none transition z-40"></div>
 
-    <!-- POPUPS -->
-    {% include popups/multiSelector-columnpicker.html %}
+  {{ content }}
 
-    <div class="multiSelector" id="multiSelector-error">
-      <div class="itemBox">
-        <ul class="itemBox__row itemBox__row--custom">
+  <!-- POPUPS -->
+  {% include popups/multiSelector-columnpicker.html %}
+
+  <div class="multiSelector" id="multiSelector-error">
+    <div class="itemBox">
+      <div class="itemBox__row">
+        <ul class="itemBox__rowInner itemBox__rowInner--custom">
           <li class="itemBox__cell">
             <div class="itemBox__cellInner">
               <div class="note note--error">
@@ -25,7 +27,9 @@
         </ul>
       </div>
     </div>
+  </div>
 
-    {% include foot.html %}
-  </body>
+  {% include foot.html %}
+</body>
+
 </html>
