Fix padding on itembox

--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -8,6 +8,10 @@
     padding: 5px 0 5px 15px;
   }
 
+  + .itemBox {
+    padding-top: 10px;
+  }
+
   &--sublist {
     padding: 5px 0 5px 5px;
     background-color: #929292;
