add focus states

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -4,8 +4,8 @@
   </div>
 
   <div class="header__actions">
-    <div class="block-action"></div>
-    <div class="block-action"></div>
+    <button class="block-action"></button>
+    <button class="block-action"></button>
   </div>
 </header>
 
@@ -14,7 +14,7 @@
     <ul class="itemBox__rowInner itemBox__rowInner--thead">
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand_header">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action"></div>
+          <button class="itemBox__action"></button>
         </div>
       </li>
       <li class="itemBox__cell">
@@ -88,7 +88,7 @@
     <ul class="itemBox__rowInner itemBox__rowInner--item">
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action"></div>
+          <button class="itemBox__action"></button>
         </div>
       </li>
       <li class="itemBox__cell">
@@ -114,10 +114,10 @@
           <h2>Integrated Release Management</h2>
         </div>
         <div class="header__actions">
-          <div class="block-action disabled"></div>
-          <div class="block-action">Print</div>
-          <div class="block-action"></div>
-          <div class="block-action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
+          <buttonbutton class="block-action disabled"></button>
+          <button class="block-action">Print</button>
+          <button class="block-action"></button>
+          <button class="block-action JS_has-popup" data-popid="#multiSelector-columnpicker"></button>
         </div>
       </header>
       <div class="itemBox__row">
