--- a/_includes/components/selector.html
+++ b/_includes/components/selector.html
@@ -27,10 +27,12 @@
 <!-- readonly -->
 {% assign readonly = "JS_selectorItem" %}
 {% assign readonlyClass = "" %}
+{% assign tabindex = "tabindex='0'" %}
 {% if include.readonly or expanded == "" %}
   {% assign readonly = "" %}
 {% endif %}
 {% if include.readonly %}
+  {% assign tabindex = "" %}
   {% assign readonlyClass = "selector--readonly" %}
 {% endif %}
 <!-- has-popup class -->
@@ -82,7 +84,7 @@
   {% if forloop.index > 1 %}
     <div class="selector__itemSeperator"></div>
   {% endif %}
-  <div class="selector__item {{readonly}} {{selected}}">
+  <div class="selector__item {{readonly}} {{selected}}" {{tabindex}} >
     <div class="selector__block">
       <!-- only show item parts if they are at least 1 character long -->
       <!-- if there is a prefix or color, show prefix -->
