Itembox: fixed button tag

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -114,7 +114,7 @@
           <h2>Integrated Release Management</h2>
         </div>
         <div class="header__actions">
-          <buttonbutton class="block-action disabled"></button>
+          <button class="block-action disabled"></button>
           <button class="block-action">Print</button>
           <button class="block-action"></button>
           <button class="block-action JS_has-popup" data-popid="#multiSelector-columnpicker"></button>
